--- a/paper/Makefile
+++ b/paper/Makefile
@@ -4,7 +4,7 @@ FILENAME=paper
 pdf:
 	mkdir $(BUILDDIR) -p
 	pandoc $(FILENAME).md \
-    --filter pandoc-citeproc \
+    --citeproc \
     --from=markdown+tex_math_single_backslash+tex_math_dollars \
     --to=latex \
     --output=$(BUILDDIR)/$(FILENAME).pdf \
